--- a/1-variables.ipynb
+++ b/1-variables.ipynb
@@ -8,12 +8,15 @@
     "\n",
     "<p style=\"text-align:right; font-style:italic;\">Last Edited: November 24th, 2025</p>\n",
     "\n",
-    "This notebook contains code to create the final dataset `finalD` that:\n",
-    "1. Filter the dataset for only videos created in 2024 and from the US.\n",
-    "2. Create the age_label category. \n",
-    "3. engagement\n",
-    "4. relatability\n",
-    "5. Emotion"
+    "This notebook contains code to create the final dataset (`finalD.csv`) from a larger collection of TikTok videos from stay-at-home mom (SAHM) creators. This notebook creates the following variables: engagement, age_group, relatability, and emotions. \n",
+    "\n",
+    "- Section 0: Anonymize dataset for public repository\n",
+    "- Section 1: Filter dataset (US, 2024, minimum activity) → `data/data0.csv`\n",
+    "- Section 2: Create age variable + sample 1,000 videos per age group → `data/data1.csv`\n",
+    "- Section 3: Create engagement metric → `data/data2.csv`\n",
+    "- Section 4: Relatability scoring → `data/data3.csv` (and `data/test_relatability.csv`)\n",
+    "- Section 5: Emotion scoring → `data/data4.csv` (and `data/test_emotion.csv`)\n",
+    "- Section 6: Variable selection → `data/finalD.csv`"
    ]
   },
   {
@@ -2829,159 +2832,6 @@
     "### Export dataset\n",
     "\n",
     "data4.to_csv(\"data/finalD.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`Section 7: Anonymous usernames`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Import relevant libraries\n",
-    "\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3561 unique usernames\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Check repeated users\n",
-    "\n",
-    "finalD = pd.read_csv('data/finalD.csv')\n",
-    "print(finalD['username'].nunique(), \"unique usernames\")\n",
-    "\n",
-    "# print(finalD['username'].nunique(), \"unique usernames\")\n",
-    "# print(finalD['username'].value_counts().head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Anonymize usernames, replace datasets\n",
-    "\n",
-    "files = ['data/data1.csv','data/data2.csv','data/data3.csv','data/data4.csv','data/finalD.csv']\n",
-    "dfs = {p.split('/')[-1].rsplit('.',1)[0]: pd.read_csv(p) for p in files}\n",
-    "\n",
-    "uniq = pd.concat([df['username'].astype('object') for df in dfs.values()]) \\\n",
-    "         .dropna().astype(str).unique()\n",
-    "\n",
-    "mapping = {orig: f\"anon_{i+1:04d}\" for i, orig in enumerate(uniq)}\n",
-    "\n",
-    "assert len(mapping) == len(uniq), \"mapping size mismatch\"\n",
-    "assert len(set(mapping.values())) == len(mapping), \"duplicates in fake names\"\n",
-    "\n",
-    "for name, df in dfs.items():\n",
-    "    df['username'] = df['username'].astype(object).map(mapping)\n",
-    "    df.to_csv(f'data/{name}.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3561 unique usernames\n"
-     ]
-    }
-   ],
-   "source": [
-    "### Check repeated users\n",
-    "\n",
-    "finalD = pd.read_csv('data/finalD.csv')\n",
-    "print(finalD['username'].nunique(), \"unique usernames\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`Archive code`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tables in DB: [('sahm',)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import duckdb\n",
-    "\n",
-    "db_file = \"data/full_database.duckdb\"\n",
-    "con = duckdb.connect(database=db_file, read_only=False)\n",
-    "tables = con.execute(\"SHOW TABLES\").fetchall()\n",
-    "print(\"Tables in DB:\", tables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Convert jsonl file to csv file\n",
-    "first_chunk = True\n",
-    "with open(\"data/data0.csv\", \"w\", encoding=\"utf-8\", newline=\"\") as f_out:\n",
-    "    for chunk in pd.read_json(\"data/data0.jsonl\", lines=True, chunksize=200_000): #arbitrary number\n",
-    "        chunk.to_csv(f_out, index=False, header=first_chunk)\n",
-    "        first_chunk = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Filter for only 2024 videos\n",
-    "data0['create_time'] = pd.to_datetime(data0['create_time'], errors='coerce')\n",
-    "data0F1 = data0.loc[data0['create_time'].dt.year == 2024].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Check for missing or invalid values in view_count\n",
-    "print(\"Total rows:\", len(data1))\n",
-    "print(\"Missing view_count:\", data1['view_count'].isna().sum())\n",
-    "print(\"Zero view_count:\", (data1['view_count'] == 0).sum())\n",
-    "print(\"Negative view_count:\", (data1['view_count'] < 0).sum())\n",
-    "print(\"Any infinite values:\", data1['view_count'].isin([float('inf'), float('-inf')]).sum())"
    ]
   }
  ],
